--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
             <div class="navbar__items">
                 <ul class="navbar__items-list">
                     <li class="navbar-list__item">
-                        <a class="navbar-list__item-link" href="#">TRANG CHỦ</a>
+                        <a class="navbar-list__item-link" href="index.html">TRANG CHỦ</a>
                     </li>
                     <li class="navbar-list__item">
-                        <a class="navbar-list__item-link" href="#">GIỚI THIỆU</a>
+                        <a class="navbar-list__item-link" href="about.html">GIỚI THIỆU</a>
                     </li>
                     <li class="navbar-list__item">
-                        <a class="navbar-list__item-link" href="#">SẢN PHẨM</a>
+                        <a class="navbar-list__item-link" href="product.html">SẢN PHẨM</a>
                     </li>
                     <li class="navbar-list__item">
-                        <a class="navbar-list__item-link" href="#">LIÊN HỆ</a>
+                        <a class="navbar-list__item-link" href="contact.html">LIÊN HỆ</a>
                     </li>
                 </ul>
             </div>
