--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <link rel="icon" type="image/png" sizes="16x16"  href="image/favicons/favicon-16x16.png">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css" integrity="sha512-/VYneElp5u4puMaIp/4ibGxlTd2MV3kuUIroR3NSQjS2h9XKQNebRQiyyoQKeiGE9mRdjSCIZf9pb7AVJ8DhCg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/index.css" type="text/css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.min.css" integrity="sha512-/VYneElp5u4puMaIp/4ibGxlTd2MV3kuUIroR3NSQjS2h9XKQNebRQiyyoQKeiGE9mRdjSCIZf9pb7AVJ8DhCg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;700&display=swap" rel="stylesheet">
@@ -20,7 +20,7 @@
 </head>
 <body>
     <header class="header">
-        <nav class="navbar">
+        <nav class="navbar__header">
             <!-- logo -->
             <div class="navbar__logo">
                 <a class="navbar__logo-link" href="index.html">
@@ -57,7 +57,7 @@
                 
                 <div class="navbar__login-cart">
                     <div class="cart">
-                        <a href="#" class="cart-link">
+                        <a href="cart.html" class="cart-link">
                             <i class="ri-shopping-basket-line"></i>
                             <div class="cart__count">0</div>
                         </a>
