--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header class="header">
-        <nav class="navbar navbar--login">
+        <nav class="navbar__header navbar--login">
             <!-- logo -->
             <div class="navbar__logo">
                 <a class="navbar__logo-link" href="index.html">
@@ -34,13 +34,13 @@
                         <a class="navbar-list__item-link" href="index.html">TRANG CHỦ</a>
                     </li>
                     <li class="navbar-list__item">
-                        <a class="navbar-list__item-link" href="#">GIỚI THIỆU</a>
+                        <a class="navbar-list__item-link" href="about.html">GIỚI THIỆU</a>
                     </li>
                     <li class="navbar-list__item">
-                        <a class="navbar-list__item-link" href="#">SẢN PHẨM</a>
+                        <a class="navbar-list__item-link" href="product.html">SẢN PHẨM</a>
                     </li>
                     <li class="navbar-list__item">
-                        <a class="navbar-list__item-link" href="#">LIÊN HỆ</a>
+                        <a class="navbar-list__item-link" href="contact.html">LIÊN HỆ</a>
                     </li>
                 </ul>
             </div>
