--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
         <nav class="navbar__header navbar--login">
             <!-- logo -->
             <div class="navbar__logo">
-                <a class="navbar__logo-link" href="index.html">
+                <a class="navbar__logo-link" href="index.php">
                     <img src="image/logo.png" alt="" class="logo-img">
                 </a>
             </div>
@@ -31,7 +31,7 @@
             <div class="navbar__items">
                 <ul class="navbar__items-list">
                     <li class="navbar-list__item">
-                        <a class="navbar-list__item-link" href="index.html">TRANG CHỦ</a>
+                        <a class="navbar-list__item-link" href="index.php">TRANG CHỦ</a>
                     </li>
                     <li class="navbar-list__item">
                         <a class="navbar-list__item-link" href="about.html">GIỚI THIỆU</a>
@@ -50,15 +50,15 @@
         </nav>
     </header>
     <div class="login-page">
-        <form method="" action="" class="login-form">
+        <form method="post" action="login.php" class="login-form">
             <h1 class="login-form__title">Đăng nhập</h1>
             <div class="login-form__input">
-                <label for="user__name"><i class="ri-user-fill"></i></label>
-                <input type="text" class="user__name" name="user__name" placeholder="Nhập số điện thoại">
+                <label for="user__phone"><i class="ri-user-fill"></i></label>
+                <input type="text" class="user__phone" name="phone" placeholder="Nhập số điện thoại">
             </div>
             <div class="login-form__input">
                 <label for="user__password"><i class="ri-lock-fill"></i></label>
-                <input type="password" class="user__password" name="user__password" placeholder="Nhập mật khẩu ">
+                <input type="password" class="user__password" name="password" placeholder="Nhập mật khẩu ">
             </div>
             
             <div class="login-form__remember">
@@ -71,13 +71,15 @@
             <button class="login-form__submit">Đăng nhập</button>
             <div class="register-link">
                 <span>Bạn chưa có tài khoản?</span>
-                <a href="register.html">Đăng ký ngay</a>
+                <a href="register.php">Đăng ký ngay</a>
             </div>
         </form>
     </div>
 
     <!-- JS -->
     <script src="js/main.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js"></script>
+    <script type="text/javascript" src="js/validate_form.js"></script>
 </body>
 </html>
